# ltx

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  justfile  lexer_road_map.md  lexer_roadmap.md  main.tex  report.md  roadmap.md  rustfmt.toml  update.md
.cargo/: config.toml
crates/ltx_cli/: Cargo.toml
crates/ltx_cli/src/: cli.rs  main.rs
crates/ltx_cli/src/commands/: mod.rs  new.rs
crates/ltx_compiler/: Cargo.toml
crates/ltx_config/: Cargo.toml
crates/ltx_config/src/: build.rs  engine.rs  lib.rs  manifest.rs  project.rs  scaffold.rs
crates/ltx_diagnostics/: Cargo.toml
crates/ltx_diagnostics/examples/: diagnostic_eg.rs  e001.rs  e002.rs  e003.rs  e004.rs  example_utils.rs  json_render.rs  lexer_errors.rs  parser_errors.rs  w001.rs  w002.rs  w003.rs
crates/ltx_diagnostics/examples/common/: example_utils.rs  mod.rs
crates/ltx_diagnostics/src/: diagnostic.rs  errors.rs  lib.rs  render.rs  severity.rs  sink.rs  source_file.rs  span.rs
crates/ltx_diagnostics/src/errors/: lexer.rs  mod.rs  parser.rs
crates/ltx_diagnostics/tests/: daig_t.rs  daignostic_test.rs  json_render_test.rs  json_tests.rs  render_tests.rs  severity_test.rs  severity_tests.rs  sink_tests.rs  source_file_test.rs  span_tests.rs
crates/ltx_fmt/: Cargo.toml
crates/ltx_lexer/: Cargo.toml
crates/ltx_lexer/benches/: catcode_bench.rs
crates/ltx_lexer/examples/: error_core_example.rs  lexer_example.rs  tokenize_example.rs
crates/ltx_lexer/src/: catcode.rs  errors_core.rs  errors_factory.rs  lexer.rs  lexer_utils.rs  lib.rs  mode.rs  stream.rs  token.rs
crates/ltx_lexer/tests/: catcode_test.rs
crates/ltx_linter/: Cargo.toml
crates/ltx_parser/: ARCHITECTURE.md  Cargo.toml  Todo.md
crates/ltx_parser/examples/: parser_example.rs
crates/ltx_parser/src/: lib.rs  parser.rs  parser_traits.rs  parser_utils.rs  utils.rs
crates/ltx_parser/src/ast/: arg.rs  body_node.rs  command.rs  comment.rs  document.rs  document_class.rs  enviroment.rs  environment.rs  group.rs  math.rs  mod.rs  node.rs  preamble.rs  text.rs  use_package.rs
crates/ltx_parser/tests/: parser_tests.rs
crates/ltx_utils/: Cargo.toml
crates/ltx_utils/src/: lib.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/errors/: lexer.md  parser.md
docs/src/guide/: installation.md
