[package]
name = "ltx_config"
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
ltx_utils = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
