[package]
name = "ltx_diagnostics"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
owo-colors = {workspace = true }
serde_json = "1"

[lints]
workspace = true
