[package]
name = "ltx_diagnostics"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1"
# Note: owo-colors and insta are usually NOT needed in main dependencies
# unless you use them in non-test code.

[dev-dependencies]
pretty_assertions = { workspace = true }
insta = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
