[package]
name = "ltx_lexer"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
logos = { workspace = true }
ltx_diagnostics = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
