[package]
name = "ltx_utils"
edition.workspace = true
version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]

[lints]
workspace = true
